# hadcom

./: .gitignore  CMakeLists.txt
forms/: main_window.ui  mode_chooser.ui
include/: application.h  connection.h  deserializer.h  local_client.h  main_window.h  mode_chooser.h  remote_client.h  serializer.h  server.h  user_info.h  version.h  version.h.in
include/packets/: chat_message_packet.h  client_joined_packet.h  client_left_packet.h  clients_list_packet.h  handshake_packet.h  packet.h  packet_factory.h
notes/: proto.txt
src/: application.cpp  connection.cpp  deserializer.cpp  local_client.cpp  main.cpp  main_window.cpp  mode_chooser.cpp  remote_client.cpp  serializer.cpp  server.cpp
src/packets/: chat_message_packet.cpp  client_joined_packet.cpp  client_left_packet.cpp  clients_list_packet.cpp  handshake_packet.cpp  packet.cpp  packet_factory.cpp
